5 -sen erro inicial

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -92,6 +92,13 @@
                 android:text="@string/action_sign_in"
                 android:textStyle="bold"
                 android:onClick="fu_logar"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/novo_cadastro"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:onClick="fu_cadastro"/>
 
         </LinearLayout>
     </ScrollView>
