--- a/app/src/main/res/layout/activity_search_problems.xml
+++ b/app/src/main/res/layout/activity_search_problems.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,11 +11,11 @@
         android:id="@+id/tv_titulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:textStyle="bold"
         android:layout_marginBottom="8dp"
-        android:text="@string/ttl_src_denunciations"/>
+        android:gravity="center"
+        android:text="@string/ttl_src_denunciations"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <Spinner
         android:id="@+id/spStates"
@@ -30,6 +28,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="TesteClick"
-        android:text="Teste"/>
+        android:text="Teste" />
 
 </LinearLayout>
