add busca por posição atula e add marcadores proximos

--- a/app/src/main/res/layout/activity_search_problems.xml
+++ b/app/src/main/res/layout/activity_search_problems.xml
@@ -30,4 +30,12 @@
         android:onClick="TesteClick"
         android:text="Teste" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="pr_busca_local_proximo"
+        android:text="Denúncias proximas" />
+
+
+
 </LinearLayout>
